<?xml version="1.0" encoding="utf-8"?>
<!-- LinearLayout theme -->
<!-- The background image was imported as a resource and made it tint so that the text is visible -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/pizza_background"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"
    tools:context="com.zybooks.pizzaparty.MainActivity">


    <!-- Represents a text view in the layout -->

    <!-- Represents a editable textview in the code -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ECE8E8"
        android:backgroundTint="#F8F6F6"
        android:labelFor="@id/num_attend_edit_text"
        android:text="@string/number_of_people"
        android:textColor="#2B2727"
        android:textColorHighlight="#FBA3A3"
        android:textSize="@dimen/label_text_size" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/_10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#0C0C0C"
        android:textColorHighlight="#F15656" />

    <!-- TextView represents the text box in layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/hungry_radio_group"
        android:text="@string/how_hungry"
        android:textColor="#1C1919"
        android:textColorHighlight="#F47676"
        android:textSize="@dimen/label_text_size" />

    <!-- Radio group represents the radio buttons  -->
    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/light_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textColor="#000000"
            android:textColorHighlight="#F15959" />

        <RadioButton
            android:id="@+id/medium_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/medium"
            android:textColor="#050505"
            android:textColorHighlight="#F15959" />

        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ravenous"
            android:textColor="#040404"
            android:textColorHighlight="#F15959" />
    </RadioGroup>

    <!-- Textview represents the text box in the layout -->
    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/total_pizzas"
        android:textColor="#191919"
        android:textColorHighlight="#F15959"
        android:textSize="@dimen/label_text_size" />

    <!-- Button represents the calculate button in the layout -->
    <!-- onClick calculates the calculate method which calculates the pizza's required -->
    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick" />
</LinearLayout>